--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ted</title>
+    <title>ted talk</title>
+    <link rel="icon" href="./img/Frame.svg">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
